Bug 1057065 - Remove obsolete code causes extra preallocated process to complement the patch of bug 1033618. r=khuey, a=2.0+